Adding auto play button

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rock Paper Scissors</title>
-    <link rel="stylesheet" href="styles/10-rock-paper-scissors copy.css" />
+    <title>Rock Paper Scissorsss</title>
+    <link rel="stylesheet" href="styles/10-rock-paper-scissors.css" />
   </head>
 
   <body>
@@ -47,6 +47,8 @@
     >
       Reset Score
     </button>
+
+    <button class="auto-play-button" onclick="autoPlay();">Auto Play</button>
 
     <script src="scripts/10-rock-paper-scissors.js"></script>
   </body>
