--- a/index.html
+++ b/index.html
@@ -1,54 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Rock Paper Scissorsss</title>
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles/10-rock-paper-scissors.css" />
   </head>
-
   <body>
-    <p class="title">Rock Paper Scissors</p>
+    <div class="container">
+      <p class="title">Rock Paper Scissors</p>
 
-    <button
-      onclick="
-      makeMove('rock');
-    "
-      class="move-button"
-    >
-      <img class="move-icon" src="images/rock-emoji.png" />
-    </button>
+      <button onclick="makeMove('rock');" class="move-button">
+        <img class="move-icon" src="images/rock-emoji.png" />
+      </button>
 
-    <button
-      onclick="
-      makeMove('paper');
-    "
-      class="move-button"
-    >
-      <img class="move-icon" src="images/paper-emoji.png" />
-    </button>
+      <button onclick="makeMove('paper');" class="move-button">
+        <img class="move-icon" src="images/paper-emoji.png" />
+      </button>
 
-    <button
-      onclick="
-      makeMove('scissors');
-    "
-      class="move-button"
-    >
-      <img class="move-icon" src="images/scissors-emoji.png" />
-    </button>
+      <button onclick="makeMove('scissors');" class="move-button">
+        <img class="move-icon" src="images/scissors-emoji.png" />
+      </button>
 
-    <p class="result js-result"></p>
-    <p class="js-moves-chosen"></p>
+      <p class="result js-result"></p>
+      <p class="js-moves-chosen"></p>
 
-    <p class="score js-score"></p>
-    <button
-      class="reset-score-button"
-      onclick="
-      resetScore();
-    "
-    >
-      Reset Score
-    </button>
+      <p class="score js-score"></p>
+      <button class="reset-score-button" onclick="resetScore();">
+        Reset Score
+      </button>
 
-    <button class="auto-play-button" onclick="autoPlay();">Auto Play</button>
+      <button class="auto-play-button" onclick="autoPlay();">Auto Play</button>
+    </div>
 
     <script src="scripts/10-rock-paper-scissors.js"></script>
   </body>
