--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div class="container">
       <p class="title">Rock Paper Scissors</p>
 
-      <button onclick="makeMove('rock');" class="move-button">
+      <button class="move-button js-rock-button">
         <img class="move-icon" src="images/rock-emoji.png" />
       </button>
 
-      <button onclick="makeMove('paper');" class="move-button">
+      <button class="move-button js-paper-button">
         <img class="move-icon" src="images/paper-emoji.png" />
       </button>
 
-      <button onclick="makeMove('scissors');" class="move-button">
+      <button class="move-button js-scissors-button">
         <img class="move-icon" src="images/scissors-emoji.png" />
       </button>
 
@@ -26,11 +26,9 @@
       <p class="js-moves-chosen"></p>
 
       <p class="score js-score"></p>
-      <button class="reset-score-button" onclick="resetScore();">
-        Reset Score
-      </button>
+      <button class="reset-score-button">Reset Score</button>
 
-      <button class="auto-play-button" onclick="autoPlay();">Auto Play</button>
+      <button class="auto-play-button">Auto Play</button>
     </div>
 
     <script src="scripts/10-rock-paper-scissors.js"></script>
