Adding warning to reset button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       <button class="reset-score-button">Reset Score</button>
 
       <button class="auto-play-button">Auto Play</button>
+      <div class="warning-container">
+        <p class="warning-text">Are you sure you want to reset the score?</p>
+        <button class="warning-button yes-button">Yes</button>
+        <button class="warning-button no-button">No</button>
+      </div>
     </div>
 
     <script src="scripts/10-rock-paper-scissors.js"></script>
